# metadata-social

./: .gitignore  README.md  nocicd.sh  run.sh  test.sh  update.sh  update_swarm.sh  version
components/: build_and_push.sh  build_and_push_images.sh  docker-compose.yaml  docker-stack.yaml  stack_file_generator.py
components/gb_map_builder/: pyproject.toml
components/gb_map_builder/tests/: test_gb_map_builder.py
components/html_builder/: Dockerfile  html_builder.py  pyproject.toml  requirements.txt
components/html_builder/tests/: test_html_builder.py
components/nginx/: Dockerfile  nginx.conf
components/pyapp/: app.py  pyproject.toml
infra/digitalocean/: 2_clusters.tf  cloud_init.yaml  dns.tf  get_ips.py  manage.py  output.tf  variables.tf  vms.tf
learning/: part1.md  part2.md  part3.md  part4.md  part5.md  part6.md  part7.md  part8.md  part9.md
