[tool.poetry]
name = "python-docker"
version = "0.1.0"
description = ""
authors = ["uigctaw <uigctaw@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
htmlclasses = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.0"
mypy = "^0.812"
bandit = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
